app/styles/main.styl
@import 'variables'
@import 'nib'
@import 'mixins'

html, body
  margin 0
  padding 0
  -webkit-font-smoothing: antialiased

*
  word-wrap: break-word
  outline: none

body
  font: 13px 'Helvetica Neue', Helvetica, Arial, sans-serif
  background: #EEE
  color: #333
  stretch()
  overflow: hidden

h1
  image: '/images/logo.png' 22px 28px
  background-repeat: no-repeat
  background-position: 17px 14px
  padding-left: 30px

a
  color: color-link
  cursor: pointer
  &:hover
    color: color-link-hover
    text-decoration: none

table
  width: 100%
  thead tr th, tfoot tr th
    height: middlebar-height
    font-weight: bold
    padding: 0 horizontal-padding
    line-height: middlebar-height
    border-bottom: 1px solid table-color-border-color
  tbody tr td, tr td, tfoot tr td
    background-color: #fff
    border-bottom: 1px solid table-color-border-color
    vertical-align: top
    line-height: middlebar-height
    padding: 0 horizontal-padding

ul
  list-style-type none
  margin: 0

form
  margin: 0

.fullscreen-container
  position: absolute
  left: 0
  top: 0
  bottom: 0
  right: 0
  background-color: #fff
  z-index: 10000
  .inner
    position: relative
  .code-bar
    padding: 0 16px
    .actions
      display: none
    a.close-fullscreen
      display: block
      absolute: top 9px right 16px
      color: #9B9DA2
      font-size: 20px
  .view-result-graph
    background-color: #F8F9FB

#page-container .page
  position: absolute
  left: nav-width
  top: 0
  bottom: 0
  right: 0

// Bootstrap overrides

.navbar-inverse .navbar-inner
  background: linear-gradient(top, #333, #181818)

.navbar-inner
  padding-left: horizontal-padding
  padding-right: horizontal-padding

.navbar .brand
  color: #fff
  font-weight: bold
  line-height: 18px
  padding-top: 8px
  padding-left: horizontal-padding
  margin-top: -2px

.navbar .nav .dropdown-toggle .caret
  margin-top: 27px

.navbar .nav > li > a
  padding-top: 0
  padding-bottom: 0
  line-height: topbar-height - 2px

.navbar .nav > li:last-child > a
  padding-right: 0

.icon-margin-right
  margin-right: 0.5em

.icon-margin-left
  margin-left: 0.5em

select
  margin-bottom: 0

/////
.body
  position: absolute
  overflow: hidden
  top: 0
  bottom: 0
  left: 0
  right: 0

#error
  position: fixed
  top: 0
  height: 72px
  left: 80px
  right: 0
  background-color: color-error
  z-index: 100;
  display: none
  line-height: 73px
  color: #fff
  padding-left :24px
  font-size: 15px
  font-weight: bold
.connection-error
  #error
    display: block

footer
  position: fixed
  bottom: 0
  height: footer-height - 1px
  left: 0
  right: 0
  line-height: footer-height - 2px
  background-color: #F2F4F7
  color: #979EAA
  font-size: 11px
  text-align: center
  border-top: 1px solid #DDE3E7
  z-index: 10

#main
  position: absolute
  overflow: hidden
  top: 0
  bottom: 0
  left: 0
  right: 0
  z-index: 10
  background-color: #E7E9EB
  transist all

#views
  position: absolute
  overflow: scroll
  top: 0
  bottom: 0
  left: 0
  right: 0
  z-index: 10
  transist all
  padding-top: 16px

.view-input
  .view-toolbar
    position: absolute;
    top: 0
    left: 0
    right: 0
    line-height: toolbar-height
    background: green
    color: #9EA4A6
    background-color: #FAFBFB
    border-bottom: 1px solid table-color-border-color
    padding: 0 horizontal-padding
    ul.inline-list
      margin-bottom 0
      margin-top 9px
      li
        line-height: 29px
        font-size: 13px
        &.divider
          border-left: 1px solid #DBE0E1

  .view-editor
    user-select: none
    min-height: 72px
    background-color: #fff
    border-right: 1px solid #E2E6E7
    position: absolute;
    top: 0
    left: 0
    right: 0
    z-index: 100
    border-bottom: 1px solid #D6D8DA
    box-shadow: 0 1px 2px rgba(0,0,0,0.07)
    ul.controls
      z-index: 1000
      absolute: top 20px right 24px
      .divider
        margin: 0 11px
        width: 1px
        padding: 0
        background-color: #EDEFF2
      a.balled
        background-color: #93969b
        transform: scale(1)
        &:hover
          transform: scale(1.2)
        &.success
          background-color: color-success
        &.golden
          background-color: #FDCC59
        &.muted
          background-color: #E5E5E7
          cursor: default
          &:hover
            transform: scale(1)
        display: inline-block
        width: 30px
        height: 30px
        text-align: center
        color: #fff
        border-radius: 50%
        vertical-align: middle
        [class^="icon-"]
          font-size: 18px
          line-height: 32px
          position: relative
          &.icon-arrow-left
            font-size: 21px
            top: -1px
          &.icon-arrow-right
            font-size: 21px
            top: -1px
          &.icon-remove
            top: -1px
          &.icon-play
            font-size: 16px
            left: 1px
          &.icon-star
            font-size: 19px

    a.open-sidebar
      top: 21px
      left: 18px
      position: absolute
      z-index: 1000
      background-color: #93969b
      width: 30px
      height: 30px
      text-align: center
      line-height: 30px
      color: #fff
      border-radius: 50%
      font-size: 14px
      .icon-chevron-left
        font-size: 18px
        line-height: 32px
        relative: left -1px
      &:hover
        background-color: lighten(#93969B, 30%)

.code-bar
  height: middlebar-height
  line-height: middlebar-height
  color: #A7A9AE
  //background-color: #FFF
  border-bottom: 1px solid table-color-border-color
  padding-left: horizontal-padding
  font-size: 13px
  overflow: hidden
  padding: 0 25px;
  .code
    text-shadow: 0 1px 0 rgba(255,255,255,0.7)
    font-family: "Menlo","Courier New","Terminal", monospace
    font-size: 12px
    margin-left: 8px
  a.close-fullscreen
    display: none
  .actions
    opacity: 0
    transist: opacity
    absolute: top 3px right 25px
    background-color: #e7e9eb
    .divider
      margin-left: 11px
      width: 0
      padding: 0
      display: inline-block
      height: 22px
      border-right: 1px solid rgba(0,0,0,0.15)
      position: relative
      top: 4px
    a
      font-size: 20px
      margin-left: 13px
      vertical-align: center
      position: relative
      color: #9B9DA2
      &:hover
        color: #3F434B
      &.icon-edit
        top: 1px
      &.icon-fullscreen
        font-size: 19px
        margin-left: 16px
      &.icon-trash
        font-size: 21px
      &.icon-remove
        top: 1px
        font-size: 26px
    .btn
      margin-left: 4px

.view
  overflow: hidden
  &:hover
    .code-bar .actions
      opacity: 1

.view .inner
  position: relative
  margin: 0 24px 16px 24px
  border: 1px solid #D2D7DD
  box-shadow: 0 1px 2px rgba(0,0,0,0.07)
  border-radius: 3px
  background-color: #fff
  overflow: hidden
  &.anim
    transform: scale(0.9, 0.9)
  &.outside
    transform: translate(0, -1000px)
  &.enter
    transform: translate(0, 0)

  .status-bar
    height: middlebar-height
    line-height: middlebar-height
    color: rgb(120, 129, 133)
    border-top: 1px solid #E7E9EB
    padding-left: horizontal-padding
    font-size: 13px
    position: relative
    .btn-group
      absolute: top 3px right 12px

    .popover.bottom
      line-height: 22px
      .arrow:after
        border-bottom-color: #f7f7f7
        border-top-width: 0
    .details
      margin-top: -4px
      margin-left: 12px
    .updated-code
      float:right
      margin-right horizontal-padding
    &.error
      color: color-error
    [class^="icon-"]
      margin-right: 6px
    i[class^="icon-"]
      margin: 0
    .icon-ok
      color: color-success

  svg
    box-shadow: inset 0 1px #fff;

  .view-result
    position: relative
    overflow: scroll
    height: auto
    transist left
    background: #F8F9FB url('/images/background-pending.png') 50% 50% no-repeat
    min-height: 300px
    z-index: 10
    &.error
      background-image: url('/images/background-error.png')

    pre
      margin: 0
      border: 0

    a[class^="icon-"]
      color: color-default-text
      cursor: pointer
      &:hover
        color: color-link
    .view-result-graph
      background-color: #F8F9FB
      height: 300px !important
      a.icon-table
        font-size: 24px
        absolute: bottom 57px right horizontal-padding
    .view-result-table
      border-top: 1px solid #fff
      background-color: #F8F9FB
      position: relative
      left: 0
      right: 0
      max-height: 359px
      a.icon-download-alt
        absolute: top 8px right horizontal-padding*2+20
        font-size: 24px
        right: horizontal-padding
      .view-result-table-scroll
        display: block;
        overflow: scroll

.update-button
  position:absolute
  bottom: 16px
  right: 16px

// UI states

.hide-editor .view
  .view-editor
    display: none
  .view-result
    top: 0 !important

.expand-graph .view .view-result
  .view-result-graph
    height: 100%
  .view-result-table
    height: 0

.expand-table .view .view-result
  .view-result-graph
    height: 0
  .view-result-table
    height: 100%

.show-sidebar
  #main
    left: (sidebar-width);

.alert-box.global
  margin-bottom: 0
  .close
    display: none

// TODO: implement this class as @extend .icon-pencil
.edit-in-place
  .edit-in-place-input
    border: none
    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif
    padding: 6px 8px
    font-size: 13px
    border-radius: 3px
    width: 187px
  .edit-in-place-trigger
    &:before
      content: "\f040"
    [class^="icon-"]:before, [class*=" icon-"]:before
      text-decoration: inherit
      display: inline-block
      speak: none
    color: sidebar-color-fg-icon
    &:hover
      color: sidebar-color-fg-icon-hover
    display: none
    width: auto
    height: auto
    line-height: normal
    vertical-align: baseline
    margin-top: 0
    font-family: FontAwesome
    font-weight: normal
    font-style: normal
    text-decoration: inherit
    -webkit-font-smoothing: antialiased
    font-size: 16px

    cursor: pointer
    position: absolute
    right: 42px
    top: 11px

